sass/layout/_header.rtl.scss
.fintech {
    > .top {
        .outer {
            .logo {
                @include breakpoint(desktops) {
                    margin: 14px  0 0 18px;
                }
            }

            .lang {
                padding-left: 0;
                font-family: $base-font;
                font-weight: 500;
            }

            .language {
                padding: 5px 10px;
                margin: 11px 0px 0 10px;
            }

            .main-nav-button {
                margin: 14px 0px 0 10px;
                transform: rotateY(180deg);
            }

            .main-nav {
                .lang {
                    padding: 2px 12px;
                    top: 0;
                }
            }
        }

        .tabs-home {
            .item {
                padding: 0 0 0.8em 0em !important;
                padding-right: 25px !important;
                font-family: $font-ar-bold;
                font-size: rem(14);
                font-weight: $font-weight-medium;

                &.questions {
                    padding-right: 30px !important;
                    padding-left: 0px !important;
                }

                i {
                    right: 0px;
                }
            }
        }
    }
}

.menu-open {
    .main-nav {}

    .language {
        /*left: 1em;
        right: auto;*/
    }
}

